# pymol-claude

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  start_headless.py
.github/workflows/: ci.yml
pymol_claude/: __init__.py  cli.py  instructions.py  mcp_server.py  metrics.py  triage.py
pymol_claude/core/: __init__.py  pymol_helpers.py  session.py
pymol_claude/tools/: metrics_tools.py  render.py  run.py  triage_tools.py
src/pymol_claude/: __init__.py  cli.py  config.py  instructions.py  server.py
src/pymol_claude/core/: metrics.py  session.py  triage.py
src/pymol_claude/tools/: metrics.py  render.py  run.py  triage.py
src/pymol_claude/utils/: __init__.py
tests/: test_metrics.py
tests/fixtures/af2/: prediction.cif  prediction_pae.json  ranking_debug.json
tests/fixtures/af3/: run_full_data_0.json  run_model_0.cif  run_summary_confidences_0.json
