[project]
name = "pymol-claude"
version = "0.1.0"
description = "PyMOL plugin that exposes PyMOL as MCP tools for Claude Code and Claude mobile"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "numpy>=1.24",
    "gemmi>=0.6",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=8.0",
    "ruff",
]

[project.scripts]
pymol-claude = "pymol_claude.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
